# TreeFinder

./: .gitignore  README.md  __init__.py  all_comparisons.py  pyproject.toml  ranking_plot.ipynb  slurm.sbatch  tree_finder.py  tree_utils.py
corroborative/: README.md
results/: hotpot_qa_ContextCite_32.json  hotpot_qa_ContextCite_50.json  hotpot_qa_TracLLM_v2.json  hotpot_qa_TreeFinder_a0.json  hotpot_qa_TreeFinder_a1.json  hotpot_qa_TreeFinder_v2.json  hotpot_qa_best_sentences_v2_50.txt  hotpot_qa_necessity_sufficiency.json  hotpot_qa_ranking_analysis_a0.json  hotpot_qa_ranking_analysis_a1.json  hotpot_qa_ranking_analysis_v2.json  hotpot_qa_topk_group_scores_a0_32.json  hotpot_qa_topk_group_scores_a1_32.json  hotpot_qa_topk_group_scores_v2_32.json  hotpot_qa_topk_group_scores_v2_50.json  longbench_ContextCite_100.json  longbench_ContextCite_32.json  longbench_TracLLM_v2.json  longbench_TreeFinder_a0.json  longbench_TreeFinder_a1.json  longbench_TreeFinder_v2.json  longbench_best_sentences_v2_100.txt  longbench_necessity_sufficiency.json  longbench_ranking_analysis_a0.json  longbench_ranking_analysis_a1.json  longbench_ranking_analysis_v2.json  longbench_topk_group_scores_a0_32.json  longbench_topk_group_scores_a1_32.json  longbench_topk_group_scores_v2_100.json  longbench_topk_group_scores_v2_32.json  loogle_long_ContextCite_100.json  loogle_long_ContextCite_32.json  loogle_long_TracLLM_v2.json  loogle_long_TreeFinder_a0.json  loogle_long_TreeFinder_a1.json  loogle_long_TreeFinder_v2.json  loogle_long_best_sentences_v2_100.txt  loogle_long_ranking_analysis_a0.json  (+9 more)
(+11 files in other folders)
