[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-finder"
version = "1.0.0"
description = "Context Analysis System using Tree-based Rationale Extraction"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "TreeFinder Contributors" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.6.0",
    "transformers>=4.57.0",
    "datasets>=4.4.0",
    "nltk>=3.9.0",
    "numpy>=2.2.0",
    "tqdm>=4.67.0",
    "scipy>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]
vllm = [
    "vllm>=0.8.0",
]
all = [
    "tree-finder[dev,vllm]",
]

[project.urls]
Homepage = "https://github.com/Pangasius/cascade"
Repository = "https://github.com/Pangasius/cascade"

[tool.setuptools]
packages = ["tree_finder"]

[tool.setuptools.package-dir]
tree_finder = "."

[tool.black]
line-length = 88
target-version = ['py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
